--- a/flex.html
+++ b/flex.html
@@ -14,7 +14,7 @@
     <div class="fila">
 
         <div id="columna_1" class="center">
-            <iframe width="250" height="220" src="https://www.youtube.com/embed/s6dVhE4AfLw"
+            <iframe width="250" height="220" src="https://www.youtube.com/embed/s6dVhE4AfLw? rel=0&autoplay=1"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
@@ -27,7 +27,7 @@
         </div>
 
         <div id="columna_2" class="center">
-            <iframe width="250" height="220" src="https://www.youtube.com/embed/qMXESlny4-I"
+            <iframe width="250" height="220" src="https://www.youtube.com/embed/qMXESlny4-I? rel=0&autoplay=1"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
@@ -36,13 +36,11 @@
             </div>
             <p class="parrafo-2">
                 Epitaph Records 3.25 M de suscriptores</p>
-
             <p class="parrafo-2">35,264,123 vistas 31 ene 2023</p>
-
         </div>
 
         <div id="columna_3" class="center">
-            <iframe width="245" height="220" src="https://www.youtube.com/embed/WJf9yPNvyfI"
+            <iframe width="245" height="220" src="https://www.youtube.com/embed/WJf9yPNvyfI? rel=0&autoplay=1"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
@@ -56,7 +54,7 @@
         </div>
 
         <div id="columna_4" class="center">
-            <iframe width="250" height="220" src="https://www.youtube.com/embed/OwOACLMsdY4"
+            <iframe width="250" height="220" src="https://www.youtube.com/embed/OwOACLMsdY4? rel=0&autoplay=1"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
